--- a/admin/config.yml
+++ b/admin/config.yml
@@ -38,6 +38,9 @@ collections:
               - cyan
               - green
               - red
+          - name: palettes
+            widget: hidden
+            required: false
   - name: home
     label: Home
     files:
